fixed letter-spacing and position in first screen

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -176,7 +176,7 @@ html, body
 
 				>.title
 					position: relative
-					top: -70px
+					top: -60px
 					border-radius: 4px
 					background-color: #ffffff
 					box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.07)
@@ -203,7 +203,6 @@ html, body
 						font-size: 1em
 						font-weight: 300
 						line-height: 1.63
-						letter-spacing: -0.5px
 						text-align: center
 						color: #0a0c0f
 						margin: 0
